# src/routes/auth.js
@@ -3,9 +3,9 @@ const router = require('express').Router();
 const authController = require('../controllers/authController');
 const auth = require('../middlewares/authentication');
 
-router.post('/register', authController.register);
 router.post('/login', authController.login);
-router.get('/protected', auth, authController.protected);
-router.get('/ping', authController.ping);
+router.post('/refresh', auth, authController.refresh);
+router.post('/logout', auth, authController.logout);
+router.post('/register', auth, authController.register);
 
 module.exports = router;
